Import of YVESAGO/App-WIoZ-0.004 from CPAN.
gitpan-cpan-distribution: App-WIoZ
gitpan-cpan-version:      0.004
gitpan-cpan-path:         YVESAGO/App-WIoZ-0.004.tar.gz
gitpan-cpan-author:       YVESAGO
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -5,9 +5,9 @@ author:
 build_requires:
   Test::More: 0
 configure_requires:
-  ExtUtils::MakeMaker: 6.31
+  ExtUtils::MakeMaker: 6.30
 dynamic_config: 0
-generated_by: 'Dist::Zilla version 4.101900, CPAN::Meta::Converter version 2.101670'
+generated_by: 'Dist::Zilla version 4.300020, CPAN::Meta::Converter version 2.120921'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -19,5 +19,7 @@ requires:
   Graphics::ColorNames: 0
   Math::PlanePath::HilbertCurve: 0
   Moose: 0
-  vars: 0
-version: 0.003
+  perl: 5.006
+  strict: 0
+  warnings: 0
+version: 0.004
